fix (data-display/Table): remove extra box stylings and adjust extra borders getting overlapped

--- a/packages/data-display/src/Table/Table.scss
+++ b/packages/data-display/src/Table/Table.scss
@@ -2,10 +2,8 @@
   padding: 0;
   padding-inline: 0;
   padding-block: 0;
-  margin-block: 15px;
 
   border: 1px solid var(--floating-border);
-  border-radius: 5px;
 }
 
 .terraprisma-table {
@@ -19,10 +17,6 @@
 
   &.boxed {
     margin: 0;
-
-    tr, th, td {
-      border-block: 1px solid var(--floating-border);
-    }
   }
 
   td, th {
